--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="main__about--heading">
                 <h1 class="main__about--name">PETER<span class="highlgiht">PHAM</span></h1>
                 <p class="main__about--location desc">Go Vap, Ho Chi Minh city, Vietnam
-                    <img src="https://cdn-icons.flaticon.com/png/128/4855/premium/4855906.png?token=exp=1640671192~hmac=6a45049689d5e1635a665ad90ddb606b" alt="" id="vietnam">
+                    <img src="https://cdn-icons.flaticon.com/png/128/4855/premium/4855906.png?token=exp=1640682330~hmac=abc9e22c3fa39acd9ac646cf1c4a7a1f" alt="" id="vietnam">
                 </p>
                 <a href="#" class="main__about--mail  alink">peter1512.dev@gmail.com</a>
             </div>
@@ -104,15 +104,15 @@
                 <p class="main__skills--desc"><span class="involved-header">Adobe(advanced):</span> Adobe Premiere</p>
             </div>
             <div class="main__skills--logos">
-                <img src="https://cdn-icons.flaticon.com/png/128/3665/premium/3665923.png?token=exp=1640673886~hmac=47262544e4eef32977513a1417f33862" alt="" id="logo">
+                <img src="https://cdn-icons.flaticon.com/png/128/3665/premium/3665923.png?token=exp=1640682369~hmac=47aa98bc2285de815cd632a50d5c7740" alt="" id="logo">
                 <img src="https://cdn-icons-png.flaticon.com/128/226/226777.png" alt="" id="logo">
-                <img src="https://cdn-icons.flaticon.com/png/128/3098/premium/3098090.png?token=exp=1640673960~hmac=ddab6c50b15b9ba97c591fbd264b3e54" alt="" id="logo">
+                <img src="https://cdn-icons-png.flaticon.com/128/5968/5968350.png" alt="" id="logo">
                 <img src="https://cdn-icons-png.flaticon.com/128/1051/1051277.png" alt="" id="logo">
                 <img src="https://cdn-icons-png.flaticon.com/128/732/732190.png" alt="" id="logo">
                 <img src="https://cdn-icons-png.flaticon.com/128/919/919831.png" alt="" id="logo">
                 <img src="https://cdn-icons-png.flaticon.com/128/5968/5968292.png" alt="" id="logo">
                 <img src="https://cdn-icons-png.flaticon.com/128/5968/5968520.png" alt="" id="logo">
-                <img src="https://cdn-icons.flaticon.com/png/128/5440/premium/5440068.png?token=exp=1640674046~hmac=6e63172a112515dd4ca628c7214f48ad" alt="" id="logo">
+                <img src="https://cdn-icons.flaticon.com/png/128/5611/premium/5611084.png?token=exp=1640682423~hmac=56303ab89155198c73c7f5fa1a07c30d" alt="" id="logo">
             </div>
         </section>
         <section class="main__projects" id="projects">
