--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p class="main__skills--desc"><span class="involved-header">Object-oriented:</span> Java</p>
                 <p class="main__skills--desc"><span class="involved-header">Data analyzing(with CSV):</span> Python</p>
                 <p class="main__skills--desc"><span class="involved-header">Web programming:</span> HTML, CSS(Sass), Javascript</p>
-                <p class="main__skills--desc"><span class="involved-header">Adobe(basics):</span> Adope Premiere, Adobe Photoshops</p>
+                <p class="main__skills--desc"><span class="involved-header">Adobe(basics):</span> Adobe Premiere, Adobe Photoshops</p>
             </div>
             <div class="main__skills--learning">
                 <span class="main__skills--header"><ion-icon name="battery-half-outline" id="battery" style="margin-right: 10px;"></ion-icon>Learning
