--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                 <p class="main__skills--desc"><span class="involved-header">Data structures(stack, queue, node, tree):</span> Java</p>
                 <p class="main__skills--desc"><span class="involved-header">Object-oriented:</span> Java</p>
                 <p class="main__skills--desc"><span class="involved-header">Data analyzing(with CSV):</span> Python</p>
-                <p class="main__skills--desc"><span class="involved-header">Web programming:</span> HTML, CSS(Sass), Javascript</p>
+                <p class="main__skills--desc"><span class="involved-header">Web programming:</span> HTML, CSS(Sass), JavaScript</p>
                 <p class="main__skills--desc"><span class="involved-header">Adobe(basics):</span> Adobe Premiere, Adobe Photoshops</p>
             </div>
             <div class="main__skills--learning">
                 <span class="main__skills--header"><ion-icon name="battery-half-outline" id="battery" style="margin-right: 10px;"></ion-icon>Learning
                 </span>
                 <p class="main__skills--desc"><span class="involved-header">CSS frameworks:</span> Tailwind, Bootstrap</p>
-                <p class="main__skills--desc"><span class="involved-header">Web animation:</span> Javascript</p>
+                <p class="main__skills--desc"><span class="involved-header">Web animation:</span> JavaScript</p>
                 <p class="main__skills--desc"><span class="involved-header">Adobe(advanced):</span> Adobe Premiere</p>
             </div>
             <div class="main__skills--logos">
