--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <span class="main__skills--header"><ion-icon name="battery-full-outline" id="battery" style="margin-right: 10px;"></ion-icon>Involved</span>
                 <p class="main__skills--desc"><span class="involved-header">Programming languages:</span> C, Java, Python</p>
                 <p class="main__skills--desc"><span class="involved-header">Data structures(stack, queue, node, tree):</span> Java</p>
-                <p class="main__skills--desc"><span class="involved-header">Object-oriented:</span> Java</p>
+                <p class="main__skills--desc"><span class="involved-header">Object-oriented programming:</span> Java</p>
                 <p class="main__skills--desc"><span class="involved-header">Data analyzing(with CSV):</span> Python</p>
                 <p class="main__skills--desc"><span class="involved-header">Web programming:</span> HTML, CSS(Sass), JavaScript</p>
                 <p class="main__skills--desc"><span class="involved-header">Adobe(basics):</span> Adobe Premiere, Adobe Photoshops</p>
