--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="subheader">
         <div class="subheader__avatar">
-            <img src="https://images.unsplash.com/photo-1608889825205-eebdb9fc5806?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGF2YXRhcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="" class="subheader__avatar--img">
+            <img src="./148bfccc5843921dcb52.jpg" alt="" class="subheader__avatar--img">
         </div>
         <ul class="submenu">
           <li class="submenu-item">
