--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="header">
         <div class="header__container">
             <div class="header__avatar">
-                <img src="https://images.unsplash.com/photo-1608889825205-eebdb9fc5806?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTd8fGF2YXRhcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60" alt="" class="header__avatar--img">
+                <img src="./148bfccc5843921dcb52.jpg" alt="" class="header__avatar--img">
             </div>
             <div class="header__menu">
                 <ul class="menu">
