--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="subheader">
         <div class="subheader__avatar">
-            <img src="./148bfccc5843921dcb52.jpg" alt="" class="subheader__avatar--img">
+            <img src="ava.jpg" alt="" class="subheader__avatar--img">
         </div>
         <ul class="submenu">
           <li class="submenu-item">
@@ -33,7 +33,7 @@
     <section class="header">
         <div class="header__container">
             <div class="header__avatar">
-                <img src="./148bfccc5843921dcb52.jpg" alt="" class="header__avatar--img">
+                <img src="ava.jpg" alt="" class="header__avatar--img">
             </div>
             <div class="header__menu">
                 <ul class="menu">
