--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p class="main__skills--desc"><span class="involved-header">Data structures(stack, queue, node, tree):</span> Java</p>
                 <p class="main__skills--desc"><span class="involved-header">Object-oriented programming:</span> Java</p>
                 <p class="main__skills--desc"><span class="involved-header">Data analyzing(with CSV):</span> Python</p>
-                <p class="main__skills--desc"><span class="involved-header">Web programming:</span> HTML, CSS(Sass), JavaScript</p>
+                <p class="main__skills--desc"><span class="involved-header">Web development:</span> HTML, CSS(Sass), JavaScript</p>
             </div>
             <div class="main__skills--learning">
                 <span class="main__skills--header"><ion-icon name="battery-half-outline" id="battery" style="margin-right: 10px;"></ion-icon>Learning
