--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section class="main__about" id="about">
             <div class="main__about--heading">
                 <h1 class="main__about--name">PETER<span class="highlgiht">PHAM</span></h1>
-                <p class="main__about--location desc">Go Vap, Ho Chi Minh city, Vietnam
+                <p class="main__about--location desc">Go Vap, Ho Chi Minh City, Vietnam
                     <img src="https://cdn-icons.flaticon.com/png/128/4855/premium/4855906.png?token=exp=1640682330~hmac=abc9e22c3fa39acd9ac646cf1c4a7a1f" alt="" id="vietnam">
                 </p>
                 <a href="#" class="main__about--mail  alink">peter1512.dev@gmail.com</a>
