--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <div class="main__skills--learning">
                 <span class="main__skills--header"><ion-icon name="battery-half-outline" id="battery" style="margin-right: 10px;"></ion-icon>Learning
                 </span>
-                <p class="main__skills--desc"><span class="involved-header">CSS frameworks:</span> Tailwind, Bootstrap</p>
-                <p class="main__skills--desc"><span class="involved-header">Web animation:</span> JavaScript</p>
+                <p class="main__skills--desc"><span class="involved-header">Bootstrap, Tailwind</p>
+                <p class="main__skills--desc"><span class="involved-header">JavaScript, React</p>
             </div>
             <div class="main__skills--logos">
                 <img src="https://cdn-icons.flaticon.com/png/128/3665/premium/3665923.png?token=exp=1640682369~hmac=47aa98bc2285de815cd632a50d5c7740" alt="" id="logo">
