--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="main__skills--learning">
                 <span class="main__skills--header"><ion-icon name="battery-half-outline" id="battery" style="margin-right: 10px;"></ion-icon>Learning
                 </span>
-                <p class="main__skills--desc"><span class="involved-header">Bootstrap, Tailwind</p>
+                <p class="main__skills--desc"><span class="involved-header">Bootstrap</p>
                 <p class="main__skills--desc"><span class="involved-header">JavaScript, React</p>
             </div>
             <div class="main__skills--logos">
