--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
             <div class="main__skills--learning">
                 <span class="main__skills--header"><ion-icon name="battery-half-outline" id="battery" style="margin-right: 10px;"></ion-icon>Learning
                 </span>
-                <p class="main__skills--desc"><span class="involved-header">Bootstrap</p>
-                <p class="main__skills--desc"><span class="involved-header">JavaScript, React</p>
+                <p class="main__skills--desc"><span class="involved-header">React, Bootstrap</p>
             </div>
             <div class="main__skills--logos">
                 <img src="https://cdn-icons-png.flaticon.com/128/226/226777.png" alt="" id="logo">
